# airlab

./: .gitignore  pyproject.toml  setup.py
airlab/loss/: pairwise.py
airlab/registration/: registration.py
airlab/regulariser/: demons.py
airlab/transformation/: pairwise.py  utils.py
airlab/utils/: imageFilters.py  matrix.py
examples/: affine_registration_2d.py  diffeomorphic_bspline_2d.py  kernel_registration_2d.py  kernel_registration_3d.py
tests/: test_pytorch_compat.py
