[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airlab"
version = "0.2.1"
description = "Autograd Image Registraion Laboratory"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Robin Sandkuehler", email = "robin.sandkuehler@unibas.ch" },
  { name = "Christoph Jud" },
]
keywords = ["image registration"]
dependencies = [
  "SimpleITK>=2.2",
  "torch>=2.5,<3",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/airlab-unibas/airlab"
Documentation = "https://airlab.readthedocs.io/en/latest/index.html"

[tool.setuptools.packages.find]
include = ["airlab*"]
namespaces = false
